--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -20,3 +20,7 @@ jobs:
 
       - name: Rodar testes
         run: npm test
+
+      - name: Enviar cobertura pro Codecov
+        uses: codecov/codecov-action@v3
+
