--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -23,4 +23,6 @@ jobs:
 
       - name: Enviar cobertura pro Codecov
         uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
